--- a/maven2/res/values/strings.xml
+++ b/maven2/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">Maven Quickstart</string>
     <string name="hello">Hello maven2!</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello maven2!</string>
 
 </resources>
